# portswigger-web-security-academy-labs

payloads/: file-upload-polyglot.php
with-python/: .gitignore  main.py  pyproject.toml
with-python/file-upload-vulnerabilities/: 01-remote-code-execution-via-webshell-upload.py  02-web-shell-upload-via-content-type-restriction-bypass.py  04-web-shell-upload-via-extension-blacklist-bypass.py  06-remote-code-execution-via-polyglot-web-shell-upload.py  07-web-shell-upload-via-race-condition.py
with-python/sql-injection/: 01-sql-injection-vulnerability-in-where-clause-allowing-retrieval-of-hidden-data.py  02-sql-injection-vulnerability-allowing-login-bypass.py  03-union-attack-determining-the-number-of-columns-return-by-the-query.py  04-sql-injection-union-attack-finding-a-column-containing-text.py  05-union-attack-retrieving-data-from-other-tables.py  06-union-attack-retrieving-multiple-values-in-a-single-column.py  07-querying-the-database-type-and-version-on-mysql-and-microsoft.py  08-listing-the-database-contents-on-non-oracle-database.py  09-blind-sql-injection-with-conditional-responses.py  10-blind-sql-injection-with-conditional-errors.py  11-visible-error-based-sql-injection.py  12-blind-sql-injection-with-time-delays-and-information-retrieval.py  13-blind-sql-injection-with-out-of-band-interaction.py  14-blind-sql-injection-with-out-of-band-data-exfiltration.py  lib.py
with-rust/: Cargo.toml  README.md  cargo.toml
with-rust/file-upload-vulnerabilities/: Cargo.toml
with-rust/file-upload-vulnerabilities/src/: lib.rs  main.rs
with-rust/logger/: Cargo.toml
with-rust/logger/src/: lib.rs
with-rust/server-side/authentication/: Cargo.toml
with-rust/server-side/authentication/src/: lib.rs
with-rust/server-side/file-upload-vulnerabilities/: Cargo.toml
with-rust/server-side/file-upload-vulnerabilities/src/: lib.rs
with-rust/server-side/sql-injection/: Cargo.toml
with-rust/server-side/sql-injection/src/: lib.rs
with-rust/sql-injection/: Cargo.toml
with-rust/sql-injection/src/: lib.rs
(+15 files in other folders)
