[package]
name = "file-upload-vulnerabilities"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.5.0"
clap = { version = "4.5.38", features = ["derive"] }
regex = "1.11.1"
reqwest = { version = "0.12.18", features = [
  "blocking",
  "multipart",
  "cookies",
] }
scraper = "0.23.1"
url = "2.5.4"
