[package]
name = "sql-injection"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.20", features = ["blocking", "cookies"] }
clap = { version = "4.5.40", features = ["derive"] }
url = "2.5.4"
scraper = "0.23.1"
regex = "1.11.1"
logger = { path = "../logger" }
rayon = "1.10.0"
